# gb_qt_homework

./: .gitignore  README.md  build.sh
src/: CMakeLists.txt
src/hw2/: CMakeLists.txt
src/hw2/src/: Parser.cpp  Parser.h  TriangleDialog.cpp  TriangleDialog.h  main.cpp
